# Trade-coin-2026

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cloud-bot.yml  pages.yml
config/: default.yaml
data/public/: latest.json
deploy/: render.yaml
docs/: GITHUB-PAGES.md  HUONG-DAN-DAY-DU.md  KIEN-THUC-PHAN-TICH.md
scripts/: cloud_scan.py  install.ps1  run_once.ps1  run_paper.ps1  run_web.ps1
src/crypto_edge/: __init__.py  cli.py  config.py  models.py
src/crypto_edge/agent/: __init__.py  engine.py
src/crypto_edge/ai/: __init__.py  reasoner.py
src/crypto_edge/alerts/: __init__.py  notify.py  telegram.py  whatsapp.py
src/crypto_edge/bayesian/: __init__.py  winrate.py
src/crypto_edge/bot/: __init__.py  service.py
src/crypto_edge/execution/: __init__.py  binance_spot.py  mexc_spot.py  paper.py  router.py
src/crypto_edge/feeds/: __init__.py  aggregator.py  rest_fallback.py  ws_feeds.py
src/crypto_edge/orderbook/: __init__.py  aggregator.py
src/crypto_edge/otc/: __init__.py  feed.py
src/crypto_edge/polymarket/: __init__.py  client.py  mispricing.py
src/crypto_edge/risk/: manager.py
src/crypto_edge/simulation/: __init__.py  mirofish.py  monte_carlo.py
src/crypto_edge/smc/: __init__.py  structure.py
src/crypto_edge/web/: __init__.py  app.py
src/crypto_edge/web/static/: app.js  style.css
src/crypto_edge/web/templates/: index.html
tests/: test_core.py  test_notify_and_bot.py
web/: index.html
web/assets/: app.js  engine.js  style.css
